fix: align all series with same height

--- a/css/main.css
+++ b/css/main.css
@@ -318,9 +318,18 @@ article > a > p {
 
 .series__content {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, minmax(min(100%, 100px), 1fr));
     gap: var(--body-margin);
-    align-items: baseline;
+    align-items: stretch;
+}
+
+.serie {
+    height: 100%;
+}
+
+.poster--container, .poster--container > img {
+    height: 100%;
+    object-fit: cover;
 }
 
 .poster--container:hover > img {
